Version 1.2.2 (2010-xx-xx)
	Added new file_data_name option that enables you to set the multipart file data param. Patch contributed by Alex Ganov.
	Fixed so the plupload.buildUrl function uses the UTF compatible encodeURIComponent method instead of escape.
Version 1.2.1 (2010-03-22)
	Fixed bug with incorrect aspect ratio in Flash image scaling.
	Fixed bug where chunked uploads could get scrambled in the Flash runtime. Patch contributed by Grady Werner.
	Fixed bug where a beta version of Chrome wouldn't handle drag/drop correctly because of missing drag effect.
	Fixed so the HTML 4 runtime displays N/A for file sizes and the progress is based on uploaded files instead of bytes.
	Fixed so chunking can be disabled properly in Flash but that will affect the progress bar.
	Fixed so queue widget displays the drag/drop message if file queue is emptied.
	Fixed small files are uploaded as one single chunk and not forced into 4 chunks in the Flash runtime.
Version 1.2 (2010-03-09)
	Added new rename file support for jQuery queue widget, click on a file name to rename it if it's enabled.
	Added official ChunkUploaded event, it similar to FileUploaded but executed for each chunk.
	Added bytes per second support to total queue progress.
	Added better error handling to core API using the new Error event.
	Added better error handling to jQuery queue widget.
	Fixed so chunking uploads is dispatch from JS not from inside Flash/Silverlight.
Version 1.1.1 (2010-02-25)
	Added new setup setting to queue widget. Makes it easier to bind custom events to uploader instance.
	Fixed so it's possible to disable chunking compleatly. It's now disabled by default.
	Fixed bug where multipart mode was enabled all the time in the Flash runtime.
	Fixed bug where chunked uploading in Silverlight would fail.
	Fixed bug where the delete button was visible while uploading.
	Fixed bug where unique_names setting wasn't working when the core API was used.