@@ -57,32 +57,39 @@
 			uploader.bind("Init", function(up) {
 				var forms, inputContainer, input, mimes = [], i, y,
 					filters = up.settings.filters, ext, type, IE = /MSIE/.test(navigator.userAgent),
-					url = "javascript", bgcolor, container = document.body;
+					url = "javascript", bgcolor, container = document.body, node;
 
 				if (uploader.settings.container) {
 					container = document.getElementById(uploader.settings.container);
 					container.style.position = 'relative';
 				}
 
-				// If no form set, create or use existing form
-				if (!up.settings.form) {
-					forms = document.getElementsByTagName('form');
-
-					if (!forms.length) {
-						form = document.createElement('form');
-						form.setAttribute('action', up.settings.url);
-						form.setAttribute('target', '_self');
-						document.body.appendChild(form);
-					} else {
-						form = forms[0];
+				// Find existing form
+				form = (typeof up.settings.form == 'string') ? document.getElementById(up.settings.form) : up.settings.form;
+				if (!form) {
+					node = document.getElementById(uploader.settings.browse_button);
+					for (; node; node = node.parentNode) {
+						if (node.nodeName == 'FORM') {
+							form = node;
+						}
 					}
-
-					form.setAttribute("id", form.id || up.id);
-					form.setAttribute('method', 'post');
-					form.setAttribute('enctype', 'multipart/form-data');
-				} else {
-					form = (typeof up.settings.form == 'string') ? document.getElementById(up.settings.form) : up.settings.form;
 				}
+
+				// If no form set, create a new one
+				if (!form) {
+					// Create a form and set it as inline so it doesn't mess up any layout
+					form = document.createElement("form");
+					form.style.display = 'inline';
+
+					// Wrap browse button in empty form
+					node = document.getElementById(uploader.settings.container);
+					node.parentNode.insertBefore(form, node);
+					form.appendChild(node);
+				}
+
+				// Force the form into post and multipart
+				form.setAttribute('method', 'post');
+				form.setAttribute('enctype', 'multipart/form-data');
 
 				// Append mutlipart parameters
 				plupload.each(up.settings.multipart_params, function(value, name) {
