@@ -1,6 +1,7 @@
 Version 1.2.2 (2010-xx-xx)
 	Added new file_data_name option that enables you to set the multipart file data param. Patch contributed by Alex Ganov.
 	Fixed so the plupload.buildUrl function uses the UTF compatible encodeURIComponent method instead of escape.
+	Fixed some issues with the HTML4 runtime if there wasn't any existing forms on the page.
 Version 1.2.1 (2010-03-22)
 	Fixed bug with incorrect aspect ratio in Flash image scaling.
 	Fixed bug where chunked uploads could get scrambled in the Flash runtime. Patch contributed by Grady Werner.
